# backend/src/modules/posts/posts_models.py
@@ -17,6 +17,8 @@ shared_posts_table = Table(
 
 
 class PostComment(Base):
+    __tablename__ = "post_comment"
+
     post_id: Mapped[uuid.UUID] = mapped_column(
         ForeignKey("post.id", onupdate="CASCADE", ondelete="CASCADE"),
         primary_key=True,
@@ -35,7 +37,8 @@ class Post(Base):
 
     id: Mapped[uuid.UUID] = mapped_column(
         primary_key=True,
-        default=uuid.uuid4,
+        init=False,
+        default_factory=uuid.uuid4,
     )
     title: Mapped[str] = mapped_column()
     content: Mapped[str] = mapped_column()
@@ -43,22 +46,20 @@ class Post(Base):
         ForeignKey("user.id", onupdate="CASCADE")
     )
     user: Mapped[User] = relationship()
-    created_at: Mapped[str] = mapped_column(default_factory=utc_now)
-    updated_at: Mapped[str] = mapped_column(
-        default_factory=utc_now,
-        onupdate=utc_now,
-    )
-    is_public: Mapped[bool] = mapped_column(default=True)
-
     shared_with_users: Mapped[list[User]] = relationship(
         secondary=shared_posts_table,
-        back_populates="shared_posts",
         lazy="write_only",
     )
     comments: Mapped[list[PostComment]] = relationship(
         order_by=PostComment.created_at.desc(),
     )
     tags: Mapped[list[str]] = mapped_column(sa.ARRAY(String))
+    created_at: Mapped[str] = mapped_column(default_factory=utc_now)
+    updated_at: Mapped[str] = mapped_column(
+        default_factory=utc_now,
+        onupdate=utc_now,
+    )
+    is_public: Mapped[bool] = mapped_column(default=True)
 
     def share_with(self, user: User):
         self.shared_with_users.append(user)
